		Added an optional map.yaml check to the OpenRA.Lint.exe command line tool.
	Mod / Custom map compatibility:
		Mods can now include traits from TD and D2K in RA.
		Mods can now customize UI text settings like font type/color/contrast for most widgets and set global defaults in metrics.yaml.
		New sections MapFolders and Translations added to mod.yaml.
		Renamed CarpetBomb trait to AttackBomber, and additional functionality added. An Armament trait is now required to specify the weapons.
		Renamed Capture trait to ExternalCapture.
		Renamed CapturableBar trait to ExternalCapturableBar.
		Renamed LegacyCapture trait to Capture.
		Renamed DebugMuzzlePositions trait to CombatDebugOverlay.
		Renamed DebugOverlay trait to PathfinderDebugOverlay.
		Added Sequence and GroundSequence properties to WithRotor.
		Added StandAnimations property to RenderInfantry and RenderInfantryProne.
		Added SplitFacings property to WithMuzzleFlash trait.
		Added SquadSize and QuantizedFacings properties to AirstrikePower trait.
		Added EjectInAir and EjectOnGround properties to EjectOnDeath trait.
		Added new traits to world: ScreenMap, ActorMap.
		Removed traits from World: SpatialBins.
		Added InvalidTargets property to weapons.
		Added modifier support for build palette hotkeys.
		The Requires: option for inheriting from a parent mod has been removed. Mods can directly reference the parent mod files instead.
		Icons definitions have moved from the unit's rules to its sequence.
		Mouse cursors (cursors.yaml) must now specify their file extension.
		OpenRA.Utility --png will now generate a set of frames for any sprite type [shp(td)/shp(ts)/shp(d2)/r8/tmp(td)/tmp(ra)].
		OpenRA.Utility --shp now requires a list of frames to be combined into a shp.
		Removed Utility --tmp-png, --r8, --fromd2 commands (use --png instead).
		Removed Asset Browser file extraction / conversion (use the Utility instead).
		Added OpenRA.Utility --map-preview for generating minimap previews.